--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -29,7 +29,15 @@
             "command": "make",
             "args": [
                 "all"
-            ]
+            ],
+            "presentation": {
+                "echo": true,
+                "reveal": "silent",
+                "focus": false,
+                "panel": "shared",
+                "showReuseMessage": true,
+                "clear": false
+            }
         },
         {
             "label": "Clean both",
@@ -38,7 +46,15 @@
             "command": "make",
             "args": [
                 "clean"
-            ]
+            ],
+            "presentation": {
+                "echo": true,
+                "reveal": "silent",
+                "focus": false,
+                "panel": "shared",
+                "showReuseMessage": true,
+                "clear": false
+            }
         },
         {
             "label": "Flash both",
@@ -47,7 +63,15 @@
             "command": "make",
             "args": [
                 "flash"
-            ]
+            ],
+            "presentation": {
+                "echo": true,
+                "reveal": "silent",
+                "focus": false,
+                "panel": "shared",
+                "showReuseMessage": true,
+                "clear": false
+            }
         },
         {
             "label": "Reset both",
@@ -56,7 +80,15 @@
             "command": "make",
             "args": [
                 "reset"
-            ]
+            ],
+            "presentation": {
+                "echo": true,
+                "reveal": "silent",
+                "focus": false,
+                "panel": "shared",
+                "showReuseMessage": true,
+                "clear": false
+            }
         }
     ]
 }
